--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
 	<nav class="navbar navbar-fixed-top navbar-default">
   <div class="container-fluid">
+
+		<!-- GOOGLE FONTS-->
+		<link href="https://fonts.googleapis.com/css?family=Lobster|Playfair+Display:700|Raleway:300,400,700" rel="stylesheet">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -95,6 +98,24 @@
 
 </body>
 </html>
+<!-- END CAROUSEL	 -->
+<div class="container" id="our_story">
+	<div class="row">
+		<div class="col-md-6">
+			<h1 class="story">Our Story</h1>
+			<h3>One Man. One Dream.</h3>
+		</div>
+		<div class="col-md-6">
+			<h2>1989</h2>
+			<p class="text-justified">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+			<p class="text-justified">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			<p class="text-justified">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			<p class="text-justified">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		</div>
+	</div>
+
+</div>
+
 	<!-- javascript	 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
