--- a/index.html
+++ b/index.html
@@ -219,7 +219,16 @@
 						<p class="text-center" id="fine-print">All fields marked <span>*</span> are mandatory.</p>
 					</form>
 				</div>
-				<div class="col-md-6"></div>
+					<div class="col-md-6">
+						<div class="container address">
+							<h4>RESTAURANTE</h4>
+							<p>12345 E Food</p>
+							<p>Fresno, CA</p>
+						</div>
+						<div class="container">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d204504.28567646892!2d-119.93464594857551!3d36.78545132148885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945de1549e4e9d%3A0x7b12406449a3b811!2sFresno%2C+CA!5e0!3m2!1sen!2sus!4v1525914345528" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+						</div>
+					</div>
 			</div>
 		</div>
 	</div>
